CADS-967 : Employment select payment frequency displaying other TextArea needs OtherLabel and fixing up for spacing and nesting.

--- a/c3/app/assets/styles/skeleton/_base.scss
+++ b/c3/app/assets/styles/skeleton/_base.scss
@@ -189,3 +189,7 @@ a:active {
 .print-only {
 	display: none;
 }
+
+.extra-padding-top {
+    padding-top: 0.5em;
+}
